--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
           </div>
 
-          <div class="col-6">
+          <div class="col-lg-6 col-md-6 col-xs-12">
             <img class="imgFeatures" src="img/features/foto Nuestra propuesta.png" alt="">
           </div>
 
@@ -304,7 +304,7 @@
  <section id="about" class="section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-xs-12" style="padding-top: 200px;">
+      <div class="col-lg-6 col-md-6 col-xs-12" style="padding-top: 50px;">
     <div class="section-header">          
       <h2 class="text-left">Detrás del proyecto</h2>
     </div>
@@ -322,7 +322,7 @@
         </div>
       </div>
       <div class="col-6">
-        <img class="imgFeatures" src="img/features/foto quienes somos.png" alt="">
+        <img class="imgDetras" src="img/features/foto quienes somos.png" alt="">
       </div>
 
     </div>
@@ -708,8 +708,7 @@
     <!-- Testimonial Section End --> 
 
 
-
-    <div class="container">
+    <div class="container" id="preguntas">
       <h1 class="text-center mt-5">Preguntas Frecuentes</h1>
 
       <div class="accordion mt-4" id="faqAccordion">
@@ -719,14 +718,14 @@
                       <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse1" style="font-size: 25px; color: #263238;">
                         ¿Cómo sé donde está mi pedido?
                       </button>
-                      <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse1" style="font-size: 28px; color: #263238;">
+                      <button id="mas" class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse1" style="font-size: 28px; color: #263238;">
                         +
                       </button>
                   </h3>
               </div>
               <div id="collapse1" class="collapse" aria-labelledby="heading1" data-parent="#faqAccordion">
                   <div>
-                  <p style="font-size: 22px!important;">Cuando realices la compra nosotros te enviaremos un código de seguimiento para que veaas en todo momento donde está tu pedido.
+                  <p style="font-size: 22px">Cuando realices la compra nosotros te enviaremos un código de seguimiento para que veaas en todo momento donde está tu pedido.
                   </p></div>
               </div>
           <div class="linea"></div>
@@ -740,14 +739,14 @@
                         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse2" style="font-size: 25px; color: #263238;">
                           ¿Puedo darme de baja en cualquier momento?
                         </button>
-                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse2" style="font-size: 28px; color: #263238;">
+                        <button id="mas" class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse2" style="font-size: 28px; color: #263238;">
                           +
                         </button>
                     </h3>
                 </div>
                 <div id="collapse2" class="collapse" aria-labelledby="heading2" data-parent="#faqAccordion">
                     <div>
-                    <p style="font-size: 22px!important;">Sí, podés darte de baja en el momento que quieras, seguramente te pidamos un feedback para sabér qué pasó. También siempre podés volver!
+                    <p style="font-size: 22px">Sí, podés darte de baja en el momento que quieras, seguramente te pidamos un feedback para sabér qué pasó. También siempre podés volver!
                     </p></div>
                 </div>
             <div class="linea"></div>
@@ -761,14 +760,14 @@
                         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse4" style="font-size: 25px; color: #263238;">
                           ¿Cuáles son los métodos de pago?
                         </button>
-                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse4" style="font-size: 28px; color: #263238;">
+                        <button id="mas" class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse4" style="font-size: 28px; color: #263238;">
                           +
                         </button>
                     </h3>
                 </div>
                 <div id="collapse4" class="collapse" aria-labelledby="heading4" data-parent="#faqAccordion">
                     <div>
-                      <p style="font-size: 22px!important;">Tenemos todos los métodos de pago para ofrecerte, transferencia, débito y crédito.
+                      <p style="font-size: 22px">Tenemos todos los métodos de pago para ofrecerte, transferencia, débito y crédito.
                       </p></div>
                 </div>
             <div class="linea"></div>
@@ -783,14 +782,14 @@
                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse5" style="font-size: 25px; color: #263238;">
                             ¿Qué pasa si mi planta llega en mal estado?
                           </button>
-                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse5" style="font-size: 28px; color: #263238;">
+                          <button id="mas" class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse5" style="font-size: 28px; color: #263238;">
                             +
                           </button>
                       </h3>
                   </div>
                   <div id="collapse5" class="collapse" aria-labelledby="heading5" data-parent="#faqAccordion">
                       <div>
-                        <p style="font-size: 22px!important;">No te preocupes, durante el envío puede pasar que tu planta se reseque. Mandanos una foto y si con el contenido de youtube no podes resolverlo, en menos de una semana hacemos el cambio.
+                        <p style="font-size: 22px">No te preocupes, durante el envío puede pasar que tu planta se reseque. Mandanos una foto y si con el contenido de youtube no podes resolverlo, en menos de una semana hacemos el cambio.
                         </p></div>
                   </div>
               <div class="linea"></div>
@@ -804,14 +803,14 @@
                         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse6" style="font-size: 25px; color: #263238;">
                           ¿Quiénes y cómo seleccionan las plantas que me llegan?
                         </button>
-                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse6" style="font-size: 28px; color: #263238;">
+                        <button id="mas" class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse6" style="font-size: 28px; color: #263238;">
                           +
                         </button>
                     </h3>
                 </div>
                 <div id="collapse6" class="collapse" aria-labelledby="heading6" data-parent="#faqAccordion">
                     <div>
-                      <p style="font-size: 22px!important;">Somos dos ingenieras agrónomas que amamos las plantas de interior. Cada especie está pensada para que en conjunto quede un espacio mas armonioso y lleno de vida.</p>
+                      <p style="font-size: 22px;">Somos dos ingenieras agrónomas que amamos las plantas de interior. Cada especie está pensada para que en conjunto quede un espacio mas armonioso y lleno de vida.</p>
                     </div>
                 </div>
             </div>
