--- a/paginadetalle.html
+++ b/paginadetalle.html
@@ -199,7 +199,7 @@
           </div>
         </div>
         <div class="col-6">
-          <img class="imgFeatures" src="img/detalle/foto detalle best-03.png" alt="">
+          <img class="imgDetalle" src="img/detalle/foto detalle best-03.png" alt="">
         </div>
   
       </div>
