--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <!-- Columna para el texto en la mitad de la pantalla -->
           <div class="col-md-6 hero-text">
               <h1 class="wow fadeInLeft" data-wow-delay="0.4s">Conectá con lo natural</h1>
-              <h3 class="wow fadeInLeft" data-wow-delay="0.6s">Descubre la belleza de la naturaleza en casa con<br>
+              <h3 class="wow fadeInLeft" data-wow-delay="0.6s">Descubre la belleza de la naturaleza en casa con
                 nuestras exclusivas cajas</h3>
               <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInLeft">Suscribite</a>
           </div>
@@ -86,7 +86,7 @@
                 <!-- <i class="lni-pencil"></i> -->
               </div>
               <h4>CREAMOS TU BOX</h4>
-              <p>Suscribite al plan que más<br>se adapta a tus
+              <p>Suscribite al plan que másse adapta a tus
                 gustos.</p>
             </div>
           </div>
@@ -97,7 +97,7 @@
                 <!-- <i class="lni-cog"></i> -->
               </div>
               <h4>RELAJATE, YA LLEGA</h4>
-              <p>En unos días tu combo estará<br>en la puerta de
+              <p>En unos días tu combo estaráen la puerta de
                 tu casa.</p>
             </div>
           </div>
@@ -109,7 +109,7 @@
               </div>
               <h4>¡A DISFRUTAR!</h4>
               <p>Listo, sólo queda cuidar
-                y<br>disfrutar de tu nueva
+                ydisfrutar de tu nueva
                 compañía. 
                 </p>
             </div>
@@ -133,7 +133,7 @@
               <div class="featured-box">
                 <div class="featured-content">
                   <h4>NO NECESITÁS SER UN EXPERTO</h4>
-                  <p>Toda la información que necesitás la<br>vas a poder encontrar en esta web.</p>
+                  <p>Toda la información que necesitás lavas a poder encontrar en esta web.</p>
                 </div>
               </div>
             </div>
@@ -141,7 +141,7 @@
               <div class="featured-box">
                 <div class="featured-content">
                   <h4>SERVICIO PERSONALIZADO</h4>
-                  <p>Nos ocupamos de que cada cliente<br>reciba la atención que se merece.</p>
+                  <p>Nos ocupamos de que cada cliente reciba la atención que se merece.</p>
                 </div>
               </div>
             </div>
@@ -149,7 +149,7 @@
               <div class="featured-box">
                 <div class="featured-content">
                   <h4>TERAPIA DE JARDINERÍA</h4>
-                  <p>Las plantas pueden tener beneficios<br>terapéuticos y mejorar el bienestar.</p>
+                  <p>Las plantas pueden tener beneficios terapéuticos y mejorar el bienestar.</p>
                 </div>
               </div>
             </div>
@@ -157,7 +157,7 @@
               <div class="featured-box">
                 <div class="featured-content">
                   <h4>EDUCACIÓN SOBRE PLANTAS</h4>
-                  <p>Brindamos información detallada<br>sobre cada tipo de planta.</p>
+                  <p>Brindamos información detallada sobre cada tipo de planta.</p>
                 </div>
               </div>
             </div>
@@ -178,7 +178,7 @@
       <div class="container">
         <div class="section-header">          
           <h2 >Elegí la mejor opción</h2>
-          <h3 style="font-size: 25px;" class="section-subtitle">Te proponemos tres Boxes para que elijas<br>
+          <h3 style="font-size: 25px;" class="section-subtitle">Te proponemos tres Boxes para que elijas
             la que mejor se adapta a tus espacios</h3>
         </div>
 
@@ -254,7 +254,7 @@
   <div class="container">
     <div class="section-header">          
       <h2>Por si todavía no sabías</h2>
-      <h3 class="section-subtitle" style="font-size: 25px;">Te contamos un poco más sobre el cuidado de estas<br>
+      <h3 class="section-subtitle" style="font-size: 25px;">Te contamos un poco más sobre el cuidado de estas
         plantas y dónde es el mejor lugar para ubicarlas</h3>
     </div>
     <div class="row">
@@ -301,10 +301,10 @@
    
 
  <!-- Features Section Start -->
- <section id="about" class="section">
+ <section id="about" class="section" >
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-xs-12" style="padding-top: 50px;">
+      <div class="col-lg-6 col-md-6 col-xs-12" id="nosotros">
     <div class="section-header">          
       <h2 class="text-left">Detrás del proyecto</h2>
     </div>
@@ -313,9 +313,9 @@
         <div class="col-12">
           <div class="featured-box">
             <div class="featured-content">
-              <h3 class="nosotros">Somos Sara y Uma, dos ingenieras agrónomas<br>
-                centradas en proyectos sociales y de conciecia<br>
-                ecológica. Nos unimos para mejorar la calidad<br>
+              <h3 class="nosotros">Somos Sara y Uma, dos ingenieras agrónomas
+                centradas en proyectos sociales y de conciecia
+                ecológica. Nos unimos para mejorar la calidad
                 de vida de nuestra amada población argentina.</h3>
             </div>
           </div>
@@ -339,7 +339,7 @@
         <div class="section-header">
           <h2>Sumate a nuestra comunidad</h2>
           <h3 class="section-subtitle" style="font-size: 25px;">¡Subí a tus redes una foto con tu planta y comentá #Plantasctic para
-            formar parte de la<br>comunidad de plantas más grande de Argentina!</h3>
+            formar parte de la comunidad de plantas más grande de Argentina!</h3>
         </div>
       </div>
       <div class="row">
