--- a/paginadetalle.html
+++ b/paginadetalle.html
@@ -94,7 +94,7 @@
               <a class="nav-link page-scroll" href="#pricing">Boxes</a>
             </li>  
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#about">Nosotros</a>
+              <a class="nav-link page-scroll" href="index.html#about">Nosotros</a>
             </li>                            
           </ul>              
         </div>
@@ -142,7 +142,7 @@
               <!-- <i class="lni-pencil"></i> -->
             </div>
             <h4>UNA BOX</h4>
-            <p>Para que puedas transportar<br>
+            <p>Para que puedas transportar
                 las herramientas</p>
           </div>
         </div>
@@ -153,7 +153,7 @@
               <!-- <i class="lni-cog"></i> -->
             </div>
             <h4>UNA PLANTA POR MES</h4>
-            <p>Para que decores los<br>
+            <p>Para que decores los
                 ambientes de tu hogar</p>
           </div>
         </div>
@@ -164,7 +164,7 @@
               <!-- <i class="lni-stats-up"></i> -->
             </div>
             <h4>HERRAMIENTAS</h4>
-            <p>Para cuidar tus nuevas<br>
+            <p>Para cuidar tus nuevas
                 mejores amigas
               </p>
           </div>
@@ -188,11 +188,11 @@
           <div class="col-12">
             <div class="featured-box">
               <div class="featured-content">
-                <p class="nosotros">El Filodendro fue la planta elegida por<br>
-                    nuestros usuarios durante el año pasado<br>
-                    como favorita. Pero no todo el mérito está<br>
+                <p class="nosotros">El Filodendro fue la planta elegida por
+                    nuestros usuarios durante el año pasado
+                    como favorita. Pero no todo el mérito está
                     en ella, sino también en su bella maceta.<br><br>
-                    ¿Todavía no te sumaste al fanatismo por<br>
+                    ¿Todavía no te sumaste al fanatismo por
                     el mundo natural? <b>!Estás a tiempo!</b></p>
               </div>
             </div>
@@ -215,7 +215,7 @@
         <div class="col-10">
           <div class="cta-trial text-center" style="margin-bottom: 40px;">
             <h2>En el mes de Marzo</h2>
-            <h2 style="font-size: 35px;">20% de descuento<br>
+            <h2 style="font-size: 35px;">20% de descuento
               por el día de la naturaleza</h2>
           </div>
         </div>
@@ -229,7 +229,7 @@
     <div class="container">
       <div class="section-header">          
         <h2 >Visitá todas nuestras propuestas</h2>
-        <p class="section-subtitle">Te proponemos dos opciones más para que elijas<br>
+        <p class="section-subtitle">Te proponemos dos opciones más para que elijas
             la que más se adapta a tus espacios</p>
       </div>
 
