--- a/paginadetalle.html
+++ b/paginadetalle.html
@@ -142,8 +142,7 @@
               <!-- <i class="lni-pencil"></i> -->
             </div>
             <h4>UNA BOX</h4>
-            <p>Para que puedas transportar
-                las herramientas</p>
+            <p>Para que puedas transportar las herramientas</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12">
@@ -153,8 +152,7 @@
               <!-- <i class="lni-cog"></i> -->
             </div>
             <h4>UNA PLANTA POR MES</h4>
-            <p>Para que decores los
-                ambientes de tu hogar</p>
+            <p>Para que decores los ambientes de tu hogar</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12" style="margin-top: 50px;">
@@ -164,8 +162,7 @@
               <!-- <i class="lni-stats-up"></i> -->
             </div>
             <h4>HERRAMIENTAS</h4>
-            <p>Para cuidar tus nuevas
-                mejores amigas
+            <p>Para cuidar tus nuevas mejores amigas
               </p>
           </div>
         </div>
@@ -188,10 +185,7 @@
           <div class="col-12">
             <div class="featured-box">
               <div class="featured-content">
-                <p class="nosotros">El Filodendro fue la planta elegida por
-                    nuestros usuarios durante el año pasado
-                    como favorita. Pero no todo el mérito está
-                    en ella, sino también en su bella maceta.<br><br>
+                <p class="nosotros">El Filodendro fue la planta elegida por nuestros usuarios durante el año pasado como favorita. Pero no todo el mérito está en ella, sino también en su bella maceta.<br><br>
                     ¿Todavía no te sumaste al fanatismo por
                     el mundo natural? <b>!Estás a tiempo!</b></p>
               </div>
@@ -210,13 +204,12 @@
 
   <!-- Call to Action Start -->
   <section class="descuento section" >
-    <div class="container" style="padding: 100px;">
+    <div class="container" id="dto">
       <div class="row justify-content-center">
         <div class="col-10">
           <div class="cta-trial text-center" style="margin-bottom: 40px;">
             <h2>En el mes de Marzo</h2>
-            <h2 style="font-size: 35px;">20% de descuento
-              por el día de la naturaleza</h2>
+            <h2 style="font-size: 35px;">20% de descuento por el día de la naturaleza</h2>
           </div>
         </div>
       </div>
@@ -229,8 +222,7 @@
     <div class="container">
       <div class="section-header">          
         <h2 >Visitá todas nuestras propuestas</h2>
-        <p class="section-subtitle">Te proponemos dos opciones más para que elijas
-            la que más se adapta a tus espacios</p>
+        <p class="section-subtitle">Te proponemos dos opciones más para que elijas la que más se adapta a tus espacios</p>
       </div>
 
       <div class="row pricing-tables" >
